fix response, exception. add pagination on film, but have erroe on previous cursor